# mcpal

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  LICENSE-APACHE  PLAN.md  README.md
.github/workflows/: book.yml  ci.yml  deb.yml  release.yml
book/: book.toml
book/src/: SUMMARY.md  auth.md  collection.md  concepts.md  discovery.md  error-codes.md  getting-started.md  install.md  intro.md  one-liners.md  protocol-matrix.md  recipes.md  scripting.md  test-corpus.md  troubleshooting.md  tui.md  ui.md  why-cli.md
crates/mcpal/: Cargo.toml
crates/mcpal-cli/: Cargo.toml
crates/mcpal-cli/examples/: oauth_mock.rs
crates/mcpal-cli/src/: cli.rs  config.rs  exit.rs  keyring.rs  kv.rs  main.rs  oauth.rs  output.rs  registry.rs  resolver.rs  runtime.rs
crates/mcpal-cli/src/commands/: auth.rs  completion.rs  config.rs  diff.rs  discover.rs  doctor.rs  init.rs  logging.rs  mod.rs  ping.rs  prompt.rs  raw.rs  repl.rs  resource.rs  server.rs  tool.rs  watch.rs
crates/mcpal-cli/tests/: everything.rs  integration.rs  integration.sh
crates/mcpal-core/: Cargo.toml
crates/mcpal-core/src/: client.rs  error.rs  handler.rs  lib.rs  spec.rs
crates/mcpal-core/tests/: everything.rs
crates/mcpal-discovery/: Cargo.toml
crates/mcpal-discovery/src/: lib.rs  parse.rs
crates/mcpal-discovery/src/sources/: claude_code.rs  claude_desktop.rs  cline.rs  cursor.rs  custom.rs  lm_studio.rs  mod.rs  opencode.rs  windsurf.rs  zed.rs
crates/mcpal-discovery/tests/: parsers.rs  sources.rs
crates/mcpal-output/: Cargo.toml
crates/mcpal-output/src/: lib.rs
crates/mcpal/src/: cli.rs  config.rs  exit.rs  keyring.rs  kv.rs  main.rs  mcp_json.rs  oauth.rs  output.rs  registry.rs  resolver.rs  runtime.rs
crates/mcpal/src/collection/: mod.rs  parse.rs  template.rs
crates/mcpal/src/commands/: auth.rs  completion.rs  config.rs  diff.rs  discover.rs  doctor.rs  logging.rs  mod.rs  prompt.rs  raw.rs  resource.rs  run.rs  server.rs  tool.rs  ui.rs  watch.rs
crates/mcpal/src/tui/: app.rs  call.rs  detail.rs  mod.rs  output.rs  sidebar.rs
crates/mcpal/tests/: integration.rs  integration.sh
demo/: README.md  cli.tape  scripting.tape  tui.tape
docs/superpowers/plans/: 2026-05-21-server-add-one-liner.md  2026-05-22-mcpal-yml-collection.md  2026-05-22-phase1-docs-polish.md  2026-05-24-discovery-expansion.md  2026-05-25-env-prompt.md
docs/superpowers/specs/: 2026-05-20-server-add-one-liner-design.md  2026-05-22-mcpal-yml-collection-design.md  2026-05-22-phase1-docs-polish-design.md  2026-05-24-discovery-expansion-design.md  2026-05-25-env-prompt-design.md
