[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.95"
authors = ["Paweł B. <pawelb@fastmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/pawelb/mcpal"

[workspace.dependencies]
rmcp = { version = "1.6", default-features = false, features = [
    "client",
    "transport-child-process",
    "macros",
] }

tokio = { version = "1", features = [
    "macros",
    "rt-multi-thread",
    "process",
    "io-util",
    "sync",
    "time",
    "fs",
] }
async-trait = "0.1"
futures = "0.3"

clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

comfy-table = "7"
owo-colors = "4"

thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

directories = "5"
which = "7"

assert_cmd = "2"
predicates = "3"
trycmd = "0.15"
tempfile = "3"

[workspace.lints.rust]
unsafe_code = "forbid"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"

[profile.release]
lto = "thin"
strip = "symbols"
