[workspace]
members = ["crates/*"]
resolver = "3"

[workspace.package]
version = "0.2.0"
edition = "2024"
rust-version = "1.85"
authors = ["Paweł B. <pawelb@fastmail.com>"]
license = "MIT"
repository = "https://github.com/pawelb0/mcpal"
homepage = "https://pawelb0.github.io/mcpal/"

[workspace.dependencies]
rmcp = { version = "1.6", default-features = false, features = [
    "client",
    "transport-child-process",
    "transport-streamable-http-client-reqwest",
    "reqwest",
    "auth",
    "macros",
] }

tokio = { version = "1", features = [
    "macros",
    "rt",
    "process",
    "io-util",
    "sync",
    "time",
    "signal",
] }
async-trait = "0.1"
futures = "0.3"

ratatui = "0.29"
crossterm = "0.28"
tui-input = "0.11"
tui-textarea = "0.7"

clap = { version = "4", features = ["derive", "env", "wrap_help"] }
clap_complete = "4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

thiserror = "2"
anyhow = "1"
jmespath = "0.5"
base64 = "0.22"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

directories = "5"
which = "7"
reqwest = { version = "0.12", default-features = false, features = [
    "rustls-tls",
    "json",
    "http2",
    "charset",
] }
keyring = { version = "3", features = ["apple-native", "windows-native", "linux-native-sync-persistent"] }
http = "1"
axum = "0.8"
webbrowser = "1"

assert_cmd = "2"
predicates = "3"
trycmd = "0.15"
tempfile = "3"
insta = { version = "1", features = ["json"] }
serde_yaml = "0.9.34"
regex = "1"
json5 = "0.4"
jsonschema = { version = "0.46", default-features = false }

[workspace.lints.rust]
unsafe_code = "deny"

[workspace.lints.clippy]
redundant_clone = "warn"
semicolon_if_nothing_returned = "warn"

[profile.release]
lto = "thin"
strip = "symbols"

# Used by cargo-dist's release builds; inherits release and turns
# everything to 11.
[profile.dist]
inherits = "release"
lto = "thin"
debug = "line-tables-only"

[workspace.metadata.dist]
cargo-dist-version = "0.31.0"
ci = "github"
installers = ["shell", "homebrew", "powershell"]
hosting = ["github"]
tap = "pawelb0/homebrew-tap"
publish-jobs = ["homebrew"]
targets = [
    "aarch64-apple-darwin",
    "x86_64-apple-darwin",
    "aarch64-unknown-linux-gnu",
    "x86_64-unknown-linux-gnu",
    "x86_64-pc-windows-msvc",
]
pr-run-mode = "plan"
install-updater = false

# The keyring crate's linux-native-sync-persistent feature links
# against libdbus via libdbus-sys.
[workspace.metadata.dist.dependencies.apt]
libdbus-1-dev = "*"
pkg-config = "*"
