[package]
name = "mcpal-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "mcpal — CLI for the Model Context Protocol."
readme = "../../README.md"
keywords = ["mcp", "cli", "ai", "oauth", "discovery"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "mcpal"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
mcpal-core = { path = "../mcpal-core", version = "0.1.0" }
mcpal-output = { path = "../mcpal-output", version = "0.1.0" }
mcpal-discovery = { path = "../mcpal-discovery", version = "0.1.0" }

tokio.workspace = true
clap.workspace = true
clap_complete.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
directories.workspace = true
comfy-table.workspace = true
keyring.workspace = true
async-trait.workspace = true
axum.workspace = true
webbrowser.workspace = true
rustyline.workspace = true

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
trycmd.workspace = true
which.workspace = true
tempfile.workspace = true
