[package]
name = "mcpal-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Core MCP client primitives used by the mcpal CLI."

[lints]
workspace = true

[dependencies]
rmcp.workspace = true
tokio.workspace = true
async-trait.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
anyhow.workspace = true
http.workspace = true

[dev-dependencies]
toml.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
which.workspace = true
tempfile.workspace = true
