[package]
name = "mcpal-discovery"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Discover MCP servers configured by other clients (Claude, Cursor, opencode, …)."

[lints]
workspace = true

[dependencies]
mcpal-core = { path = "../mcpal-core" }

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tracing.workspace = true
directories.workspace = true
json5.workspace = true

[dev-dependencies]
insta = { version = "1", features = ["json"] }
tempfile.workspace = true
