[package]
name = "mcpal-output"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Output renderers (human, json, jsonl) for mcpal."
readme = "../../README.md"
keywords = ["mcp", "cli", "output"]
categories = ["command-line-interface"]

[lints]
workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
thiserror.workspace = true
