[package]
name = "mcpal"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
description = "mcpal — CLI for the Model Context Protocol."
readme = "../../README.md"
keywords = ["mcp", "cli", "ai", "oauth", "discovery"]
categories = ["command-line-utilities", "development-tools"]

[lints]
workspace = true

[dependencies]
mcpal-core = { path = "../mcpal-core", version = "0.3.1" }

mcpal-discovery = { path = "../mcpal-discovery", version = "0.3.1" }

tokio.workspace = true
clap.workspace = true
clap_complete.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
directories.workspace = true
keyring.workspace = true
async-trait.workspace = true
axum.workspace = true
webbrowser.workspace = true
reqwest.workspace = true
jsonschema.workspace = true
semver.workspace = true
serde_yaml.workspace = true
regex.workspace = true
jmespath.workspace = true
futures.workspace = true
base64.workspace = true

ratatui = { workspace = true, optional = true }
crossterm = { workspace = true, features = ["event-stream"], optional = true }
tui-input = { workspace = true, optional = true }
tui-textarea = { workspace = true, optional = true }

[features]
default = ["tui"]
tui = ["dep:ratatui", "dep:crossterm", "dep:tui-input", "dep:tui-textarea"]

[package.metadata.deb]
maintainer = "Paweł B. <pawelb@fastmail.com>"
copyright = "2026, Paweł B. <pawelb@fastmail.com>"
license-file = ["../../LICENSE", "0"]
extended-description = """\
mcpal is a scriptable CLI for the Model Context Protocol. It connects to MCP
servers over stdio or HTTP and calls tools, reads resources, gets prompts,
runs raw JSON-RPC, streams notifications, and ships an interactive TUI.\
"""
section = "utils"
priority = "optional"
depends = "$auto, libdbus-1-3"
assets = [
    ["target/release/mcpal", "usr/bin/", "755"],
    ["../../README.md", "usr/share/doc/mcpal/README.md", "644"],
]

[dev-dependencies]
assert_cmd.workspace = true
predicates.workspace = true
trycmd.workspace = true
which.workspace = true
tempfile.workspace = true
